[tool.poetry]
name = "retux"
version = "0.1.0"
description = "A Discord API wrapper built with good intentions."
authors = ["James Walston"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
cattrs = "^22.1.0"
trio = "^0.21.0"
trio-websocket = "^0.9.2"
httpx = "^0.23.0"
exceptiongroup = "^1.0.0-rc.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pyright = "^1.1.261"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
